src/pages/index.module.css
/**
 * CSS files with the .module.css suffix will be treated as CSS modules
 * and scoped locally.
 */

.heroBanner {
  padding: 4rem 0;
  text-align: center;
  position: relative;
  overflow: hidden;
}

@media screen and (max-width: 996px) {
  .heroBanner {
    padding: 2rem;
  }
}

.heroBannerLogo {
  max-width: 400px;
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

.sectionTitle {
  font-size: 2rem;
}

.sectionTagline {
  font-size: 1.25rem;
}

.sectionAlt {
  background-color: var(--ifm-color-emphasis-100);
}

